# wasmtime

./: Cargo.toml  build.rs  ed25519.c  new_file
.github/workflows/: main-new-assembler.yml  manual.yml  performance.yml  sg-benchmark.yml  sg-benchmarking.yml
cranelift/assembler-x64/: Cargo.toml
cranelift/assembler-x64/fuzz/: Cargo.toml
cranelift/assembler-x64/fuzz/fuzz_targets/: roundtrip-xed.rs
cranelift/assembler-x64/meta/: Cargo.toml
cranelift/assembler-x64/meta/src/: dsl.rs  generate.rs  instructions.rs
cranelift/assembler-x64/meta/src/dsl/: encoding.rs  features.rs  format.rs
cranelift/assembler-x64/meta/src/generate/: format.rs  inst.rs  operand.rs
cranelift/assembler-x64/meta/src/instructions/: add.rs  add_v.rs  addpd.rs  addps.rs  and.rs  or.rs  shift.rs  sqrt.rs  sub.rs  xor.rs
cranelift/assembler-x64/src/: api.rs  evex.rs  fuzz.rs  inst.rs  lib.rs  mem.rs  vex.rs
cranelift/assembler/meta/src/: dsl.rs  instructions.rs
cranelift/assembler/meta/src/dsl/: encoding.rs  format.rs
cranelift/assembler/meta/src/generate/: inst.rs  operand.rs
cranelift/assembler/meta/src/instructions/: add_s.rs  and.rs
cranelift/assembler/src/: imm.rs
cranelift/codegen/: Cargo.toml
cranelift/codegen/meta/src/: gen_asm.rs
cranelift/codegen/meta/src/isa/: x86.rs
cranelift/codegen/meta/src/isa/x86/: encodings.rs
cranelift/codegen/src/: context.rs  lib.rs
cranelift/codegen/src/isa/x64/: abi.rs  inst.isle  lower.isle  lower.rs  mod.rs
cranelift/codegen/src/isa/x64/inst/: args.rs  emit.rs  external.rs  mod.rs  regs.rs
cranelift/codegen/src/isa/x64/lower/: isle.rs
cranelift/codegen/src/isa/x86/: mod.rs
cranelift/codegen/src/machinst/: compile.rs  lower.rs  vcode.rs
cranelift/filetests/filetests/isa/x64/: apx-add.clif
cranelift/reader/src/: parser.rs
cranelift/src/: wasm.rs
crates/c-api/src/: config.rs  engine.rs
crates/export-hacks/: Cargo.toml
crates/export-hacks/src/: lib.rs
crates/jit/: Cargo.toml
crates/jit/src/: link.rs
crates/wasi-common/cap-std-sync/: Cargo.toml
crates/wasmtime/: Cargo.toml
meetings/cranelift/2021/: cranelift-11-29.md
src/commands/: run.rs
supply-chain/: config.toml
