[package]
name = "cranelift-assembler-x64"
description = "A Cranelift-specific x64 assembler"
version = "0.135.0"
license = "Apache-2.0 WITH LLVM-exception"
edition.workspace = true
rust-version.workspace = true

[dependencies]
arbitrary = { workspace = true, features = ["derive"], optional = true }
capstone = { workspace = true, optional = true }
xed-sys = { workspace = true, optional = true }

[dev-dependencies]
arbitrary = { workspace = true, features = ["derive"] }
arbtest = { workspace = true }
capstone = { workspace = true }

[build-dependencies]
cranelift-assembler-x64-meta = { path = "meta", version = "0.135.0" }

[lints]
workspace = true

[features]
fuzz = ['dep:arbitrary', 'dep:capstone']
# Adds Intel XED as a second, optional disassembler oracle for the roundtrip
# fuzzer. This is additive on top of `fuzz` (Capstone remains the default
# oracle); XED is only built when this feature is explicitly enabled. Note that
# building XED requires Python 3.9+ and a C compiler.
fuzz-xed = ['fuzz', 'dep:xed-sys']
